# symtool

./: .gitignore  Pipfile  README.md  pyproject.toml  requirements.txt  setup.cfg  symtool.py  tox.ini
.github/workflows/: run_tests.yml  test-and-publish.yml  test-only.yml  test_and_publish.yml
asm/: Makefile  beeper.s  countdown.s  gendeps.awk  genexports.awk  genflags.awk  libsym.s  message.s  monitor.s  segments.s  simple_beep.s  sym1.cfg  timedelay.s
symtool/: disasm.py  main.py  symtool.py
tests/: test_disasm.py
tests/functional/: test_sym.py
tests/unit/: test_disasm.py  test_symtool.py
