[metadata]
name = symtool
version = attr: symtool.__version__
description = Interact with Synertek SYM-1 computer
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/larsks/symtool
author = Lars Kellogg-Stedman
author_email = lars@oddbit.com

[options]
packages = find:
include_package_data = True
install_requires =
  click

[options.entry_points]
console_scripts =
    symtool = symtool.main:main
